kubernetes/apps/base/networking/envoy-gateway/config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-ingress
  namespace: networking
spec:
  gatewayClassName: envoy-ingress
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: bwees-dev-tls
    # only use bwees.io certs with its domain
    - name: https-public
      protocol: HTTPS
      port: 443
      hostname: '*.bwees.io'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: bwees-io-tls
