kubernetes/apps/base/networking/envoy-gateway/config/https-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: networking
  annotations:
    # disable wildcard route from external-dns
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-ingress
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
